# cursor-vibe-starter

./: .cursorrules  .env.example  .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml
example/security-microservice/: .dockerignore  Dockerfile  auth.py  config.py  docker-compose.yml  logging_config.py  main.py  models.py  redis_dep.py  requirements-dev.txt  requirements.txt  scan_store.py
example/security-microservice/middleware/: rate_limiter.py  request_logger.py
example/security-microservice/routes/: auth.py  health.py  scan.py
example/security-microservice/tests/: conftest.py  test_auth.py  test_health.py  test_logging_redaction.py  test_rate_limit.py  test_scan.py
metrics/: loc_analysis.py  methodology.md  results.md
paper/: paper.tex
prompts/: 01_api_design.md  02_security_review.md  03_test_generation.md  04_docker_setup.md  05_database_schema.md  06_auth_flow.md  07_error_handling.md  08_logging_setup.md  09_ci_pipeline.md  10_refactor.md  11_documentation.md  12_incident_response.md
scripts/: render_banner.py
